# dymium-provider

./: .gitignore  .indra  README.md
.github/workflows/: release.yml
DymiumProvider/: README.md  package-lock.json  package.json
DymiumProvider/DymiumProvider/: App.swift  DymiumProvider.entitlements  Info.plist
DymiumProvider/DymiumProvider/Config/: AppConfig.swift
DymiumProvider/DymiumProvider/Services/: KeychainService.swift  OpenCodeConfigService.swift  OpenCodePluginService.swift  TokenService.swift  TokenWriter.swift
DymiumProvider/DymiumProvider/Views/: GhostShape.swift  PopoverView.swift
DymiumProvider/src/: App.css  App.tsx
DymiumProvider/src-tauri/: Cargo.toml  tauri.conf.json
DymiumProvider/src-tauri/capabilities/: default.json
DymiumProvider/src-tauri/icons/: icon.icns
DymiumProvider/src-tauri/plugin/: index.ts
DymiumProvider/src-tauri/src/: lib.rs  main.rs
DymiumProvider/src-tauri/src/services/: config.rs  keystore.rs  mod.rs  opencode.rs  token.rs
DymiumProviderMacOS/: Package.swift  README.md
DymiumProviderMacOS/DymiumProvider/: App.swift
DymiumProviderMacOS/DymiumProvider/Config/: AppConfig.swift
DymiumProviderMacOS/DymiumProvider/Model/: TokenState.swift
DymiumProviderMacOS/DymiumProvider/Services/: ModelSyncService.swift  TokenService.swift
DymiumProviderMacOS/DymiumProvider/Views/: PopoverView.swift
