[package]
name = "dymium-provider"
version = "0.1.6"
description = "Dymium Provider - Cross-platform GhostLLM authentication manager"
authors = ["Dymium"]
edition = "2021"

[lib]
name = "dymium_provider_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# HTTP client for OAuth
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }

# Async runtime
tokio = { version = "1", features = ["full"] }

# Cross-platform keyring/secret storage
keyring = "3"

# Date/time handling
chrono = { version = "0.4", features = ["serde"] }

# Directories (for ~/.dymium, ~/.config, etc.)
dirs = "6"

# Logging
log = "0.4"
env_logger = "0.11"

# Error handling
thiserror = "2"
anyhow = "1"

# For self-signed cert support
rustls = "0.23"

[target.'cfg(target_os = "linux")'.dependencies]
# Linux-specific: For AppIndicator/system tray support
# libappindicator is handled by Tauri's tray-icon feature

[features]
# This feature is used for production builds or when a dev server is not specified
custom-protocol = ["tauri/custom-protocol"]
